--- a/homework_1.ipynb
+++ b/homework_1.ipynb
@@ -17,7 +17,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "1. Uzdevums."
+        "1. Create a function that takes two arguments and returns their sum"
       ],
       "metadata": {
         "id": "LICgzV04mLaD"
@@ -25,13 +25,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "fRtkjgenj7qV"
       },
       "outputs": [],
       "source": [
-        "3 + 2"
+        "def sum(a, b):\n",
+        "    return a + b\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(sum(1,2))"
+      ],
+      "metadata": {
+        "id": "2UmXaVdqnYLf",
+        "outputId": "66986253-c8d7-422c-cf59-fab2a94dac5e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n"
+          ]
+        }
       ]
     }
   ]
