--- a/homework_1.ipynb
+++ b/homework_1.ipynb
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 10,
       "metadata": {
         "id": "fRtkjgenj7qV"
       },
@@ -41,19 +41,98 @@
         "print(sum(1,2))"
       ],
       "metadata": {
-        "id": "2UmXaVdqnYLf",
-        "outputId": "66986253-c8d7-422c-cf59-fab2a94dac5e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "2UmXaVdqnYLf",
+        "outputId": "8e87b96b-204a-481e-e5bc-6328f13dc1f6"
       },
-      "execution_count": 3,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2. Create a function that takes two strings and concatenates them"
+      ],
+      "metadata": {
+        "id": "f912HFf7orHu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print (sum(\"string1\", \"string2\"))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "x_hjJchyozDn",
+        "outputId": "7b5bee98-818d-482d-8943-cb9f8259e9d7"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "string1string2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3. Create a function that takes a number and returns all the numbers from 0 to that number"
+      ],
+      "metadata": {
+        "id": "rR4x6KeEo_1n"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def numbers(number):\n",
+        "  list = []\n",
+        "  for i in range(number):\n",
+        "    list.append(i)\n",
+        "  return list"
+      ],
+      "metadata": {
+        "id": "OnmBVrbmpDkC"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(numbers(8))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ILOya84rpnaB",
+        "outputId": "0fcd0be3-98e2-4b0f-96bc-f3f80aa872ca"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0, 1, 2, 3, 4, 5, 6, 7]\n"
           ]
         }
       ]
