--- a/homework_2.ipynb
+++ b/homework_2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1a6jmk_RmZFLrI08FR-XWKU3PMKt-3_x8",
-      "authorship_tag": "ABX9TyO2jqmghltlpMUfCSDDHyRB",
+      "authorship_tag": "ABX9TyP2vZP0PHYlJk0bSUpNRhTd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -802,12 +802,29 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "df[(df['Churn']=='Yes')&(df['gender']=='Male')].shape[0]"
+      ],
       "metadata": {
-        "id": "ZYjZ2CtRI0vq"
+        "id": "ZYjZ2CtRI0vq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7a1fc732-168d-4888-d2be-d532aae10ad0"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "930"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -820,12 +837,31 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "MC=df['MonthlyCharges'].mean()\n",
+        "# df[(df['Churn']=='No')&(df['Partner']=='Yes')&(df['MonthlyCharges']>MC)].to_csv('/content/drive/MyDrive/data-science/partners.csv')\n",
+        "df[(df['Churn']=='No')&(df['Partner']=='Yes')&(df['MonthlyCharges']>MC)].shape[0]\n"
+      ],
       "metadata": {
-        "id": "5VJPF3qCI-HV"
+        "id": "5VJPF3qCI-HV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5010a053-1b15-4287-b23d-2e12fcd46e20"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1500"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -838,11 +874,13 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "df[df['Churn']=='Yes'].nlargest(10,'MonthlyCharges').to_csv('/content/drive/MyDrive/data-science/10largestlost.csv')"
+      ],
       "metadata": {
         "id": "xm7jbdAoJBq-"
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -856,11 +894,13 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "df[(df['Churn']=='Yes')&(df['PaperlessBilling']=='Yes')].nlargest(100,'TotalCharges').to_csv('/content/drive/MyDrive/data-science/100paperlesslost.csv')"
+      ],
       "metadata": {
         "id": "_9nAymTcJESt"
       },
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -874,12 +914,30 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "q=df['TotalCharges'].quantile(0.75)\n",
+        "df[(df['Churn']=='Yes')&(df['SeniorCitizen']>0)&(df['TotalCharges']>q)].shape[0]"
+      ],
       "metadata": {
-        "id": "kOfKVwqUJJUy"
+        "id": "kOfKVwqUJJUy",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3cbccc86-0439-4c42-c189-adcf8737ae2e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "77"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
     }
   ]
 }
